--- a/EmailService/src/main/resources/application.properties
+++ b/EmailService/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=softwareengineeringIJSE@gmail.com
-spring.mail.password=boetfzbejjithdve
+spring.mail.username=diprabadiya@gmail.com
+spring.mail.password=Dip@2711
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
