--- a/UserService/src/main/resources/application.properties
+++ b/UserService/src/main/resources/application.properties
@@ -19,4 +19,4 @@ eureka.client.refresh.enable=false
 
 eureka.client.service-url.default-zone=http://localhost:8761/eureka
 
-mail-service-url=http://localhost:8075/api/v1/mail/send
+mail-service-url=http://localhost:8075/api/v1/mail/send/welcome
