--- a/UserService/src/main/resources/application.properties
+++ b/UserService/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 
 spring.servlet.multipart.enabled=true
-spring.servlet.multipart.max-file-size=20MB
+spring.servlet.multipart.max-file-size=200MB
 
 
 spring.application.name=user-service
@@ -19,4 +19,4 @@ eureka.client.refresh.enable=false
 
 eureka.client.service-url.default-zone=http://localhost:8761/eureka
 
-mail-service-url=http://localhost:8075/api/v1/mail/send/welcome
+mail-service-url=http://localhost:8075
